# StackAI

./: .env.example  .gitignore  README.md  Task_Description.md  pyproject.toml
app/: README.md  __init__.py  config.py  deps.py  main.py  mistral_client.py
app/api/: __init__.py  documents.py  ingest.py  query.py  schemas.py
app/generation/: __init__.py  generator.py  policy.py  query_transform.py  templates.py  verifier.py
app/ingestion/: __init__.py  chunker.py  ocr_fallback.py  pdf_parser.py  pipeline.py
app/retrieval/: __init__.py  bm25.py  embeddings.py  fusion.py  hyde.py  mmr.py  rerank.py  search.py  vector_index.py
app/static/: app.js  index.html  styles.css
app/storage/: __init__.py  bm25_store.py  db.py  recovery.py  repository.py  schema.sql  vector_store.py
tests/: __init__.py  conftest.py
tests/fakes/: mistral.py
tests/frontend/: test_app.cjs
tests/integration/: test_documents_endpoint.py  test_frontend_static.py  test_health.py  test_ingest_endpoint.py  test_ocr_ingestion.py  test_pipeline.py  test_pipeline_concurrency.py  test_query_endpoint.py  test_query_intent.py  test_query_minimal.py  test_query_rerank_threshold.py  test_query_single_doc.py  test_recovery_edge_cases.py  test_recovery_invariants.py  test_section_aware_retrieval.py
tests/unit/: test_bm25.py  test_chunker.py  test_config.py  test_db.py  test_embeddings.py  test_fake_mistral.py  test_fusion.py  test_generator.py  test_hyde.py  test_mistral_client.py  test_mmr.py  test_ocr_fallback.py  test_pdf_parser.py  test_policy.py  test_query_helpers.py  test_query_transform.py  (+8 more)
